--- a/_data/alphabets/small/katakana.yaml
+++ b/_data/alphabets/small/katakana.yaml
@@ -1,38 +1,38 @@
 - letter: ア # a, i, u, e, o
-  color: yellow
-  iconSrc: "../assets/art/unknown.svg"
-  strokeSrc: "../assets/art/unknown.svg"
-  japanese: 'カミングスーン'
-  romaji: 'kamingusūn'
-  english: 'Coming soon!'
+  color: purple
+  iconSrc: "../assets/art/ice-cream.svg"
+  strokeSrc: "../assets/art/kata-a.svg"
+  japanese: 'アイスクリーム'
+  romaji: 'aisukurīmu'
+  english: 'ice cream'
 - letter: イ
-  color: yellow
-  iconSrc: "../assets/art/unknown.svg"
-  strokeSrc: "../assets/art/unknown.svg"
-  japanese: 'カミングスーン'
-  romaji: 'kamingusūn'
-  english: 'Coming soon!'
+  color: pink
+  iconSrc: "../assets/art/ink.svg"
+  strokeSrc: "../assets/art/kata-i.svg"
+  japanese: 'インク'
+  romaji: 'inku'
+  english: 'ink'
 - letter: ウ 
-  color: yellow
-  iconSrc: "../assets/art/unknown.svg"
-  strokeSrc: "../assets/art/unknown.svg"
-  japanese: 'カミングスーン'
-  romaji: 'kamingusūn'
-  english: 'Coming soon!'
+  color: green
+  iconSrc: "../assets/art/virus.svg"
+  strokeSrc: "../assets/art/kata-u.svg"
+  japanese: 'ウイルス'
+  romaji: 'uirusu'
+  english: 'virus'
 - letter: エ
-  color: yellow
-  iconSrc: "../assets/art/unknown.svg"
-  strokeSrc: "../assets/art/unknown.svg"
-  japanese: 'カミングスーン'
-  romaji: 'kamingusūn'
-  english: 'Coming soon!'
+  color: blue
+  iconSrc: "../assets/art/air-conditioner.svg"
+  strokeSrc: "../assets/art/kata-e.svg"
+  japanese: 'エアコン'
+  romaji: 'eakon'
+  english: 'air conditioner'
 - letter: オ 
-  color: yellow
-  iconSrc: "../assets/art/unknown.svg"
-  strokeSrc: "../assets/art/unknown.svg"
-  japanese: 'カミングスーン'
-  romaji: 'kamingusūn'
-  english: 'Coming soon!'
+  color: orange
+  iconSrc: "../assets/art/omurice.svg"
+  strokeSrc: "../assets/art/kata-o.svg"
+  japanese: 'オムライス'
+  romaji: 'omuraisu'
+  english: 'omurice (Japanese omelette rice)'
 - letter: カ # ka, ki, ku, ke, ko
   color: yellow
   iconSrc: "../assets/art/unknown.svg"
