--- a/_data/alphabets/small/katakana.yaml
+++ b/_data/alphabets/small/katakana.yaml
@@ -104,40 +104,40 @@
   romaji: 'sofa'
   english: 'sofa'
 - letter: タ # ta, chi, tsu, te, to
-  color: yellow
-  iconSrc: "../assets/art/unknown.svg"
-  strokeSrc: "../assets/art/unknown.svg"
-  japanese: 'カミングスーン'
-  romaji: 'kamingusūn'
-  english: 'Coming soon!'
+  color: blue
+  iconSrc: "../assets/art/taxi.svg"
+  strokeSrc: "../assets/art/kata-ta.svg"
+  japanese: 'タクシー'
+  romaji: 'takushī'
+  english: 'taxi'
 - letter: チ
-  color: yellow
-  iconSrc: "../assets/art/unknown.svg"
-  strokeSrc: "../assets/art/unknown.svg"
-  japanese: 'カミングスーン'
-  romaji: 'kamingusūn'
-  english: 'Coming soon!'
+  color: purple
+  iconSrc: "../assets/art/cheese.svg"
+  strokeSrc: "../assets/art/kata-chi.svg"
+  japanese: 'チーズ'
+  romaji: 'chīzu'
+  english: 'cheese'
 - letter: ツ
-  color: yellow
-  iconSrc: "../assets/art/unknown.svg"
-  strokeSrc: "../assets/art/unknown.svg"
-  japanese: 'カミングスーン'
-  romaji: 'kamingusūn'
-  english: 'Coming soon!'
+  color: green
+  iconSrc: "../assets/art/horsetail.svg"
+  strokeSrc: "../assets/art/kata-tsu.svg"
+  japanese: 'ツクシ'
+  romaji: 'tsukushi'
+  english: 'horsetail plant'
 - letter: テ
-  color: yellow
-  iconSrc: "../assets/art/unknown.svg"
-  strokeSrc: "../assets/art/unknown.svg"
-  japanese: 'カミングスーン'
-  romaji: 'kamingusūn'
-  english: 'Coming soon!'
+  color: pink
+  iconSrc: "../assets/art/tv.svg"
+  strokeSrc: "../assets/art/kata-te.svg"
+  japanese: 'テレビ'
+  romaji: 'terebi'
+  english: 'television'
 - letter: ト
-  color: yellow
-  iconSrc: "../assets/art/unknown.svg"
-  strokeSrc: "../assets/art/unknown.svg"
-  japanese: 'カミングスーン'
-  romaji: 'kamingusūn'
-  english: 'Coming soon!'
+  color: orange
+  iconSrc: "../assets/art/tomato.svg"
+  strokeSrc: "../assets/art/kata-to.svg"
+  japanese: 'トマト'
+  romaji: 'tomato'
+  english: 'tomato'
 - letter: ナ # na, ni, nu, ne, no
   color: yellow
   iconSrc: "../assets/art/unknown.svg"
