--- a/_data/alphabets/large/katakana.yaml
+++ b/_data/alphabets/large/katakana.yaml
@@ -171,7 +171,7 @@ cols:
       english: 'frying pan'
     - letter: ム
       color: orange
-      iconSrc: "../assets/art/insect.svg"
+      iconSrc: "../assets/art/noodle.svg"
       strokeSrc: "../assets/art/unknown.svg"
       japanese: 'ムシ'
       romaji: 'mushi'
