--- a/_data/alphabets/large/katakana.yaml
+++ b/_data/alphabets/large/katakana.yaml
@@ -177,7 +177,7 @@ cols:
       romaji: 'mushi'
       english: 'insect'
     - letter: ユ
-      color: yellow
+      color: pink
       iconSrc: "../assets/art/ufo.svg"
       strokeSrc: "../assets/art/unknown.svg"
       japanese: 'ユーフォー'
